--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -16,7 +16,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-ble-plx": "^2.0.3",
+    "react-native-bluetooth-classic": "^1.60.0-rc.28",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^12.1.1",
