--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^12.1.1",
+    "react-native-system-navigation-bar": "^2.6.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
